--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
@@ -9,7 +9,7 @@ unlisted: true
 
 Salut à tous !
 
-Une conférence **[React-Native-Connection](https://reactnativeconnection.io/)** vient d'être annoncée à Paris le 1er Juin. Je vais participer à la sélection des talks.
+Une conférence **[React-Native-Connection](https://reactnativeconnection.io/)** vient d'être annoncée à Paris le 1er Juin. Je vais participer à la sélection des talks. Il y a également un [meetup React-Native Paris](https://www.meetup.com/fr-FR/meetup-group-xaaafwks/events/291247291/) le 7 Février.
 
 <Todo />
 
@@ -43,7 +43,46 @@ Nous sommes ravis de collaborer avec Strapi, Appwrite, Meilisearch et Medusa. Il
 
 ## ⚛️ React {#react}
 
-<Todo />
+**[Why React isn't dying](https://tkdodo.eu/blog/why-react-isnt-dying)**
+
+https://twitter.com/TkDodo/status/1619749271657660416
+
+---
+
+**[Redwood 4.0](https://community.redwoodjs.com/t/redwood-v4-0-0-is-now-available/4538)**
+
+https://twitter.com/thedavidprice/status/1618359683563290626
+
+---
+
+**[Astro - Unlock New Possibilities with Hybrid Rendering](https://astro.build/blog/hybrid-rendering/)**
+
+https://twitter.com/FredKSchott/status/1618665800705146881
+
+---
+
+- 💬 [Replace Create React App recommendation with Vite - Dan Abramov answers](https://github.com/reactjs/reactjs.org/pull/5487#issuecomment-1409720741): long commentaire de Dan qui relate l'histoire, le but de CRA, et son avenir avec 5 options possibles. TLDR: ils ne souhaitent pas déprécier CRA mais ne veulent pas pour autant le recommander: se priver de SSG/SSR n'est pas une bonne chose. Il est possible que le CLI de CRA devienne un "launcher" qui propose de choisir entre plusieurs frameworks populaires: Next.js, Remix, CRA...
+- 👀 [AsyncContext + React](https://twitter.com/sebmarkbage/status/1620442034598477824): Sebastian Markbåge évoque l'idée d'utiliser la proposal TC39 [AsyncContext](https://github.com/legendecas/proposal-async-context) (stage 0) comme context React 🤔
+- 👀 ["Statically typed links are coming to Next.js"](https://twitter.com/shuding_/status/1620137501192253440)
+- 👀 [Coming soon to Next.js - improved SEO support!](https://twitter.com/leeerob/status/1619743437577912321) + https://twitter.com/shuding_/status/1619775431921762304
+- 📜 [Storybook - Component Story Format 3 is here](https://storybook.js.org/blog/storybook-csf3-is-here/): le nouveau format sort de beta et apporte des améliorations intéressantes (boilerplate, composition, `play` function...) tout en restant backward compatible.
+- 📜 [The Curious Case of React](https://cult.honeypot.io/reads/the-curious-case-of-react/)
+- 📜 [The Key To Good Component Design Is Selfishness](https://www.smashingmagazine.com/2023/01/key-good-component-design-selfishness/)
+- 📜 [Resumable React: How To Use React Inside Qwik](https://www.builder.io/blog/resumable-react-how-to-use-react-inside-qwik)
+- 📜 [Nextra 2 – Next.js Static Site Generator](https://the-guild.dev/blog/nextra-2)
+- 📜 [How Netlify Uses Storybook for Visual Regression Testing](https://www.netlify.com/blog/storybook-visual-regression-testing/)
+- 📜 [How to create one form with many actions in Remix](https://www.wking.dev/library/how-to-create-one-form-with-many-actions-in-remix)
+- 🎥 [Andrew Clark on the Creation of Redux](https://www.youtube.com/watch?v=WvRcZkuXmpo): interview qui relate la période 2014-2015, bon teaser du [documentaire React](https://www.youtube.com/watch?v=gmp0istg5xo) qui sort prochainement. Redux a proposé l'implémentation Flux la plus élégante, et popularisé le concept de reducer. Andrew ne désavoue pas le projet, mais est content que React propose progressivement de meilleures alternatives pour certaines problématiques comme le data-fetching.
+- 🎥 [I Was Wrong About Nested React Components](https://www.youtube.com/watch?v=2sAdzy90GtE): Jack illustre bien pourquoi il ne faut surtout pas déclarer un composant à l'intérieur d'un autre.
+- 🎥 [Scroll Management with Remix and React Router](https://www.youtube.com/watch?v=4_H8j3rkpjI)
+- 🎥 [State of React Ecosystem Jan 2023](https://www.youtube.com/watch?v=_nGuk2Gs2oc)
+- 📦 [React Router 6.8.0](https://github.com/remix-run/react-router/releases/tag/react-router%406.8.0)
+- 📦 [Remix 1.12](https://github.com/remix-run/remix/releases/tag/remix%401.12.0)
+- 📦 [Docusaurus 2.3](https://docusaurus.io/blog/releases/2.3)
+- 📦 [TinyBase 3.0](https://twitter.com/tinybasejs/status/1619763700650614784)
+- 📦 [Redux Toolkit 1.9.2](https://twitter.com/acemarke/status/1619445949822009346)
+- 🤖 [Houston - Astro Assitant AI](https://twitter.com/astrodotbuild/status/1619053233082859521): la doc Astro à sa propre IA pour répondre à vos questions. Remix semble vouloir [faire pareil](https://twitter.com/mjackson/status/1619419579754889218).
+- 🐦 [Lee Robinson - "new version of my website"](https://twitter.com/leeerob/status/1620073039131213824)
 
 <SubscribeFormEmbed />
 
@@ -63,7 +102,20 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 📖 [Open Native Docs](https://twitter.com/ammarahm_ed/status/1620136052152500225): la doc d'Open Native est en ligne. Ce projet propose d'unifier les libs natives pour fonctionner sur plusieurs écosystèmes: React-Native, NativeScript,
+- 📜 [React Native 0.71-RC0 Android outage postmortem](https://reactnative.dev/blog/2023/01/27/71rc1-android-outage-postmortem)
+- 📜 [Making Your React Native Gestures Feel Natural](https://shopify.engineering/making-react-native-gestures-feel-natural)
+- 📜 [Run Tests for Key Pieces of Your App](https://www.callstack.com/blog/run-tests-for-key-pieces-of-your-app)
+- 📜 [Optimize Your Android Application’s Size with Gradle Settings](https://www.callstack.com/blog/optimize-android-application-size-with-gradle-settings)
+- 📜 [Summary of 2022 — React Native Open Source at Software Mansion](https://blog.swmansion.com/summary-of-2022-react-native-open-source-at-software-mansion-9edf929db005) + https://twitter.com/swmansion/status/1620091215545864194
+- 📜 [Using Apache ECharts in React Native](https://medium.com/@chenzhiqing/using-apache-echarts-in-react-native-55c6d555ac03) + https://twitter.com/wcandillon/status/1619298383851827200
+- 🎨 [Fabric + React-Native-macOS demo - WIP](https://twitter.com/ReactNativeMSFT/status/1619037832496156674)
+- 🎨 [Expo Router - Quick Notes demo](https://twitter.com/Baconbrix/status/1619609828380540929)
+- 🎨 [CSS Modules in Expo demo](https://twitter.com/Baconbrix/status/1619179207250296833)
+- 🐦 ["PS5 user interface using react native"](https://twitter.com/Kelset/status/1619991122130137089)
+- 🐦 ["react-native-drawer-layout is back"](https://twitter.com/satya164/status/1620186837917786114)
+- 📦 [react-native-select-pro](https://github.com/MobileReality/react-native-select-pro)
+- 🎙️ [The React Native Show 20 - Remotion and Animations in React Native with Jonny Burger](https://www.youtube.com/watch?v=1VW5Gluxa4w)
 
 ---
 
@@ -92,6 +144,9 @@ Ponicode (CircleCI) est un partenaire de code basé sur une IA. Ils recrutent un
 ## 🇫🇷 En français {#fr}
 
 - 👥 [React-Native-Connection](https://reactnativeconnection.io/): nouvelle conférence React-Native à Paris
+- 🎥 [React Framework ou Librairie ?](https://www.youtube.com/watch?v=F9LEcEpSH1U)
+- 🎥 [TS v5.0-beta, Astro v2.0, "scrollend" - Actualités de la semaine en JS](https://www.youtube.com/watch?v=jS6guseEVSQ)
+- 🎥 [React, Angular, Vue, Svelte, Solid, Qwik : que disent les sondages?](https://www.youtube.com/watch?v=k-SM7b_OmbI)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -101,12 +156,30 @@ Ponicode (CircleCI) est un partenaire de code basé sur une IA. Ils recrutent un
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [TC39 January 2023 meeting](https://github.com/babel/proposals/issues/86): de belles proposals comme [Immutable Array methods (change array by copy)](https://twitter.com/AndaristRake/status/1620154153250217988) et [Symbols as WeakMap keys](https://twitter.com/sebastienlorber/status/1620385689853661185) passent en stage 4.
+- [TypeScript 5.0 Beta](https://devblogs.microsoft.com/typescript/announcing-typescript-5-0-beta/): la [vidéo de Matt Pocock](https://www.youtube.com/watch?v=iOTAFRFgm8I) met bien en avant certaines nouveautés intéressantes comme les decorators ou encore les const type parameters.
+- [Release Notes for Safari Technology Preview 162](https://webkit.org/blog/13703/release-notes-for-safari-technology-preview-162/): CSS nesting, declarative shadow DOM...
+- [Scrollend, a new JavaScript event](https://developer.chrome.com/blog/scrollend-a-new-javascript-event/): déjà dans Chrome, Firefox et polyfills disponibles
+- ["Turbopack is adding support for webpack loaders"](https://twitter.com/jaredpalmer/status/1619071988181651456)
+- [What’s next for Flutter](https://medium.com/flutter/whats-next-for-flutter-b94ce089f49c)
+- [You’ve Got Options for Removing Event Listeners](https://www.macarthur.me/posts/options-for-removing-event-listeners)
+- [Deno 1.30: Built-in Node modules](https://deno.com/blog/v1.30)
+- [10 Web Development Trends in 2023](https://www.robinwieruch.de/web-development-trends/)
+- [2023 State of Databases for Serverless & Edge](https://leerob.io/blog/backend)
+- [Improve your test experience with Playwright Soft Assertions](https://timdeschryver.dev/blog/improve-your-test-experience-with-playwright-soft-assertions)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/sarah_edo/status/1619843000661843968
+
+https://twitter.com/mjackson/status/1619730599748710401
+
+https://twitter.com/trashh_dev/status/1619717085055303682
+
+https://twitter.com/t3dotgg/status/1618932062236594179
+
+https://twitter.com/tlakomy/status/1618397733190250496
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
