--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
@@ -45,7 +45,7 @@ Nous sommes ravis de collaborer avec Strapi, Appwrite, Meilisearch et Medusa. Il
 
 **[Why React isn't dying](https://tkdodo.eu/blog/why-react-isnt-dying)**
 
-https://twitter.com/TkDodo/status/1619749271657660416
+Dominik explique pourquoi n'est pas près de mourir. React a popularisé le JSX et le concept de composant et de declarative UI. Les alternatives reprennent les bonnes parties et essaient de résoudre les problèmes, mais cela sera difficile de le challenger vu la taille son écosystème et sa communauté qui ne fait que se renforcer avec le temps. Les librairies framework agnostic (TanStack) ont un role à jouer et permettent de transférer la connaissance d'un écosystème à l'autre.
 
 ---
 
