--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
@@ -102,7 +102,7 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 
 ## 📱 React-Native {#react-native}
 
-- 📖 [Open Native Docs](https://twitter.com/ammarahm_ed/status/1620136052152500225): la doc d'Open Native est en ligne. Ce projet propose d'unifier les libs natives pour fonctionner sur plusieurs écosystèmes: React-Native, NativeScript,
+- 📖 [Open Native Docs](https://twitter.com/ammarahm_ed/status/1620136052152500225): la doc d'Open Native est en ligne. Propose d'unifier les libs natives pour fonctionner sur plusieurs écosystèmes: React-Native, NativeScript, Flutter...
 - 📜 [React Native 0.71-RC0 Android outage postmortem](https://reactnative.dev/blog/2023/01/27/71rc1-android-outage-postmortem)
 - 📜 [Making Your React Native Gestures Feel Natural](https://shopify.engineering/making-react-native-gestures-feel-natural)
 - 📜 [Run Tests for Key Pieces of Your App](https://www.callstack.com/blog/run-tests-for-key-pieces-of-your-app)
