--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
@@ -37,7 +37,7 @@ Vous pouvez gagner 1500 $ et de nombreux cadeaux !
 
 Nous sommes ravis de collaborer avec Strapi, Appwrite, Meilisearch et Medusa. Ils sponsorisent le Hackathon refine et les gagnants recevront des cadeaux de chacun d'entre eux !
 
-[Plus d'informations sur le Hackathon](https://refine.dev/blog/refine-hackathon/).
+[Plus d'informations sur le Hackathon](https://s.refine.dev/hackathon).
 
 ---
 
