--- a/website/newsletter/133/index.mdx
+++ b/website/newsletter/133/index.mdx
@@ -37,7 +37,7 @@ You can win $1500 and special swag kits!
 
 We are excited to collaborate with Strapi, Appwrite, Meilisearch, and Medusa. They are sponsoring the refine Hackathon and the winners will get a swag kit from each of them!
 
-[More information about the Hackathon](https://refine.dev/blog/refine-hackathon/).
+[More information about the Hackathon](https://s.refine.dev/hackathon).
 
 ---
 
