--- a/website/newsletter/133/index.mdx
+++ b/website/newsletter/133/index.mdx
@@ -102,3 +102,5 @@ We have several roles open for developers focused on React Native! Pay is ~160k 
 <Todo />
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+
+See ya! 👋
