--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
@@ -9,6 +9,8 @@ unlisted: true
 
 Salut à tous !
 
+Cette année, j'aimerais faire évoluer la newsletter vers un format un peu plus digeste. Est-ce que vous avez des suggestions à me faire? Est-ce que vous trouvez que je met trop de liens et certains peuvent être supprimés? Ou alors vous aimez le côté exhaustif? Mon but c'est que cette newsletter prenne moins de temps à écrire pour que je puisse vous proposer du contenu plus intéressant, comme des articles originaux. Je vais vous expliquer tout ça prochainement.
+
 Une conférence **[React-Native-Connection](https://reactnativeconnection.io/)** vient d'être annoncée à Paris le 1er Juin. Je vais participer à la sélection des talks. Il y a également un [meetup React-Native Paris](https://www.meetup.com/fr-FR/meetup-group-xaaafwks/events/291247291/) le 7 Février.
 
 <!-- truncate -->
@@ -57,7 +59,7 @@ Dominik explique pourquoi n'est pas près de mourir. React a popularisé le JSX 
 
 ---
 
-[![esumable React: How To Use React Inside Qwik](/emails/issues/133/qwik.jpg)](https://www.builder.io/blog/resumable-react-how-to-use-react-inside-qwik)
+[![Resumable React: How To Use React Inside Qwik](/emails/issues/133/qwik.jpg)](https://www.builder.io/blog/resumable-react-how-to-use-react-inside-qwik)
 
 **[Resumable React: How To Use React Inside Qwik](https://www.builder.io/blog/resumable-react-how-to-use-react-inside-qwik)**
 
@@ -107,13 +109,13 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 
 ## 📱 React-Native {#react-native}
 
-- 📖 [Open Native Docs](https://twitter.com/ammarahm_ed/status/1620136052152500225): nouvelle doc en ligne. Propose d'unifier les libs natives pour fonctionner sur plusieurs écosystèmes: React-Native, NativeScript, Flutter...
 - 📜 [React Native 0.71-RC0 Android outage postmortem](https://reactnative.dev/blog/2023/01/27/71rc1-android-outage-postmortem): l'équipe React-Native revient sur les builds Android bloqués de Novembre 2022 causés par une publication Maven et une dépendance Gradle non figée.
 - 📜 [Summary of 2022 — React Native Open Source at Software Mansion](https://blog.swmansion.com/summary-of-2022-react-native-open-source-at-software-mansion-9edf929db005): belle retrospective de Software Mansion, on peut dire qu'ils ont été actif cette année!
 - 📜 [Making Your React Native Gestures Feel Natural](https://shopify.engineering/making-react-native-gestures-feel-natural): présente quelques techniques utiles (spring, velocity, resistance) rendre ses animations plus naturelles.
 - 📜 [Using Apache ECharts in React Native](https://medium.com/@chenzhiqing/using-apache-echarts-in-react-native-55c6d555ac03): présente une nouvelle librairie qui propose de rendre des charts Apache EChart sur React-Native avec au choix React-Native-SVG ou React-Native-Skia.
 - 📜 [Run Tests for Key Pieces of Your App](https://www.callstack.com/blog/run-tests-for-key-pieces-of-your-app)
 - 📜 [Optimize Your Android Application’s Size with Gradle Settings](https://www.callstack.com/blog/optimize-android-application-size-with-gradle-settings)
+- 📖 [Open Native Docs](https://twitter.com/ammarahm_ed/status/1620136052152500225): nouvelle doc en ligne. Propose d'unifier les libs natives pour fonctionner sur plusieurs écosystèmes: React-Native, NativeScript, Flutter...
 - 🎨 [Fabric + React-Native-macOS demo - WIP](https://twitter.com/ReactNativeMSFT/status/1619037832496156674)
 - 🎨 [Expo Router - Quick Notes demo](https://twitter.com/Baconbrix/status/1619609828380540929)
 - 🎨 [CSS Modules in Expo demo](https://twitter.com/Baconbrix/status/1619179207250296833)
