--- a/website/newsletter/133/index.mdx
+++ b/website/newsletter/133/index.mdx
@@ -1,17 +1,18 @@
 ---
 slug: /133
-title: "This Week In React #133: ..."
+title: "This Week In React #133: Astro, React dying?, Qwikify, CRA, Next.js, Remix, Redux, Component Design, Storybook, Nextra, React-Native..."
 authors: [slorber]
 date: 01-31-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Hi everyone!
 
-Check out **[CSS Animation Weekly](https://weekly.cssanimation.rocks/?utm_source=thisweekinreact)**, a great resource for creative CSS developers looking for cool inspiration.
+This year, I would like to make the newsletter a little more digestible. Do you have any suggestions for me? Do you think I put too many links and some can be deleted? Or do you like the exhaustive side? My goal is to make this newsletter less time consuming to write so that I can offer you more interesting content, like original articles. I'll explain it all to you soon.
 
 If you are into Docusaurus, I was recently invited to the [Semaphore podcast to talk about it](https://semaphoreci.com/blog/sebastien-lorber-docusaurus).
+
+Check out **[CSS Animation Weekly](https://weekly.cssanimation.rocks/?utm_source=thisweekinreact)**, a great resource for creative CSS developers looking for cool inspiration.
 
 <!-- truncate -->
 
