--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
@@ -1,10 +1,9 @@
 ---
 slug: /133
-title: "React Hebdo #133: ..."
+title: "React Hebdo #133: Astro, React dying?, Qwikify, CRA, Next.js, Remix, Redux, Component Design, Storybook, Nextra, React-Native..."
 authors: [slorber]
 date: 01-31-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
