--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /133
-title: "React Hebdo #133: Astro, React dying?, Qwikify, CRA, Next.js, Remix, Redux, Component Design, Storybook, Nextra, React-Native..."
+title: "React Hebdo #133: Astro, React dying?, Qwikify, CRA, Next.js, Remix, Redux, Storybook, Redwood, Nextra, React-Native..."
 authors: [slorber]
 date: 01-31-2023
 image: /img/TWIR_POST.png
