--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/134/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/134/index.mdx
@@ -41,7 +41,23 @@ Nous sommes ravis de collaborer avec Strapi, Appwrite, Meilisearch et Medusa. Il
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Netlify Acquires Gatsby Inc. to Accelerate Adoption of Composable Web Architectures](https://www.netlify.com/press/netlify-acquires-gatsby-inc-to-accelerate-adoption-of-composable-web-architectures/) + https://twitter.com/biilmann/status/1620858155625492480 + https://www.gatsbyjs.com/blog/gatsby-is-joining-netlify/ + https://twitter.com/GatsbyJS/status/1620826106944450563 + https://twitter.com/kylemathews/status/1620854695509237761 + https://twitter.com/Netlify/status/1620821991627309056 + https://thenewstack.io/netlify-acquires-gatsby-its-struggling-jamstack-competitor/
+
+---
+
+[Making state machines global in React](https://stately.ai/blog/making-state-machines-global-in-react) + https://twitter.com/DavidKPiano/status/1620815180392452096
+
+---
+
+- [React recursively re-renders child components, but there is a nuance](https://alexsidorenko.com/blog/react-render-children-prop/)
+- [WebStorm announces official support for Astro](https://astro.build/blog/astro-webstorm-support/) + https://twitter.com/astrodotbuild/status/1621591261521260549
+- [`create-astro` CLI redesign](https://twitter.com/n_moore/status/1621524815550074880)
+- [TypeScript Utility Types You Need To Know](https://www.builder.io/blog/utility-types): présente en particulier `Awaited` et `ReturnType`, mais aussi `Readonly` dans un contexte React.
+- [Building a GPT-3 app with Next.js and Vercel Edge Functions](https://vercel.com/blog/gpt-3-app-next-js-vercel-edge-functions)
+- [Ionic 7 Beta](https://ionic.io/blog/announcing-the-ionic-7-beta)
+- [Why would anyone buy Gatsby?](https://www.youtube.com/watch?v=5HE6FcOpit8)
+- [Using Svelte Inside A React App](https://www.youtube.com/watch?v=FrusJNycQvk)
+- [Shopify.com using Remix](https://twitter.com/remix_run/status/1622666016135475200)
 
 <SubscribeFormEmbed />
 
@@ -67,7 +83,12 @@ Use [Checkly](https://www.checklyhq.com/?utm_medium=email&utm_source=newsletter&
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- [RFC: React DOM for Native (reduce API fragmentation)](https://twitter.com/ReactWeb/status/1621220405251014656): la RFC de Nicolas Gallagher a été mise à jour. Le but est d'aligner les APIs React-Native le plus possible des APIs DOM pour transformer le "learn once, run everywhere" en "write once, run everywhere". La communauté semble partagée.
+- [Android-performance-profiler becomes Flashlight](https://twitter.com/almouro/status/1622588283740880897)
+- [SolidJS + NativeScript demo running React-Native-WebView](https://twitter.com/ammarahm_ed/status/1622259723729764354): la promesse d'Open Native est intéressante pour la portabilité du code natif.
+- [Ignite Cookbook for React Native](https://twitter.com/ir_ignite/status/1621202420704620544): liste de recettes React-Native.
+- [The White House calls for more interoperability between mobile platforms](https://twitter.com/JI/status/1620948253381632000)
+- [React-Native-Radio 258 - AI Robots coding React Native?!](https://reactnativeradio.com/episodes/r258-robots-coding-react-native)
 
 ---
 
@@ -95,7 +116,7 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [ES2023, Netlify achète Gatsby, VSCode v1.75 - Actus de la semaine en JS](https://www.youtube.com/watch?v=-DWyB-D52FI)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -105,13 +126,44 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Updates from the 94th TC39 meeting](https://dev.to/hemanth/updates-from-the-94th-tc39-meeting-48mb): liste finalisée des propositions qui passent au stage. Particulièrement excité par AsnycContext, Change array by Copy et Symbols as WeakMap keys (nécessaire pour Records & Tuples).
+- [WebKit - Pushing Interop Forward in 2023](https://webkit.org/blog/13706/interop-2023/) + [Chrome - Interop 2023: continuing to improve the web for developers](https://web.dev/interop-2023/)
+- [Deno - The Future (and the Past) of the Web is Server Side Rendering](https://deno.com/blog/the-future-and-past-is-server-side-rendering)
+- [Understanding monomorphism can improve your JavaScript performance 60x](https://twitter.com/mhevery/status/1622499229813047296)
+- [Speeding up the JavaScript ecosystem - eslint](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-3/)
+- [Google is working on bringing Chromium to iOS](https://twitter.com/OpenWebAdvocacy/status/1621653519274246144) + [Mozilla is working on bringing Firefox to iOS](https://twitter.com/OpenWebAdvocacy/status/1622898924775415808)
+- [The Guide To Responsive Design In 2023 and Beyond](https://ishadeed.com/article/responsive-design/)
+- [A Business Case for SvelteKit](https://elliscs.hashnode.dev/a-business-case-for-sveltekit)
+- [Node.js 19.6](https://twitter.com/ruyadorno/status/1621186886470361093)
+- [Ada 1.0 - New Node.js URL parser](https://twitter.com/nodejs/status/1622707746716917761)
+- [Vite 4.1](https://twitter.com/vite_js/status/1621149774627094535)
+- [Don't use return types, unless...](https://www.youtube.com/watch?v=nwSe95uFN8E)
+- [The Dangers Of Return Types in TypeScript](https://www.youtube.com/watch?v=I6V2FkW1ozQ)
+- [Learn Images - In-depth course on images for the web](https://web.dev/learn/images/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/trashh_dev/status/1622254449468272640
+
+https://twitter.com/mattpocockuk/status/1622243247350226945
+
+https://twitter.com/flaviocopes/status/1622159970266488832
+
+https://twitter.com/jherr/status/1621903690197250048
+
+https://twitter.com/jarredsumner/status/1621720676762791936
+
+https://twitter.com/transitive_bs/status/1621422250569211910
+
+https://twitter.com/BHolmesDev/status/1621331322265272327
+
+https://twitter.com/transitive_bs/status/1621422250569211910
+
+https://twitter.com/ThePrimeagen/status/1620827474681827333
+
+https://twitter.com/trashh_dev/status/1620811316939345920
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
 
