--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/134/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/134/index.mdx
@@ -9,7 +9,13 @@ unlisted: true
 
 Salut à tous !
 
-<Todo />
+Gatsby vient d'être racheté par Netlify 🤯
+
+Il y a aussi une RFC très intéressante à lire si vous êtes passionnés de cross-platform en React-Native.
+
+A part ça, c'est une semaine plutôt calme. Ça tombe bien, car j'ai eu beaucoup de temps cette semaine 😄. Je dois finir quelques préparatifs pour l'email de la semaine prochaine qui sera un peu différent.
+
+Il devrait y avoir des annonces liées à la conf **[React Native Connection](https://reactnativeconnection.io/)** au meetup [React Native Paris #2](https://www.meetup.com/fr-FR/meetup-group-xaaafwks/events/291247291/) ce soir 😜.
 
 <!-- truncate -->
 
@@ -41,23 +47,39 @@ Nous sommes ravis de collaborer avec Strapi, Appwrite, Meilisearch et Medusa. Il
 
 ## ⚛️ React {#react}
 
-[Netlify Acquires Gatsby Inc. to Accelerate Adoption of Composable Web Architectures](https://www.netlify.com/press/netlify-acquires-gatsby-inc-to-accelerate-adoption-of-composable-web-architectures/) + https://twitter.com/biilmann/status/1620858155625492480 + https://www.gatsbyjs.com/blog/gatsby-is-joining-netlify/ + https://twitter.com/GatsbyJS/status/1620826106944450563 + https://twitter.com/kylemathews/status/1620854695509237761 + https://twitter.com/Netlify/status/1620821991627309056 + https://thenewstack.io/netlify-acquires-gatsby-its-struggling-jamstack-competitor/
+[![Netlify Acquires Gatsby Inc. to Accelerate Adoption of Composable Web Architectures](/emails/issues/134/netlify-gatsby.jpg)](https://www.netlify.com/press/netlify-acquires-gatsby-inc-to-accelerate-adoption-of-composable-web-architectures/)
+
+**[Netlify Acquires Gatsby Inc. to Accelerate Adoption of Composable Web Architectures](https://www.netlify.com/press/netlify-acquires-gatsby-inc-to-accelerate-adoption-of-composable-web-architectures/)**
+
+C'est la grosse nouvelle de la semaine. Gatsby Inc. racheté par Netlify. Le framework Gatsby passe donc également sous la gouverne de Netlify au coté d'Eleventy et SolidJS et continuera d'évoluer. Les features de Gatsby Cloud (notamment le [Valhalla Content Hub](https://www.gatsbyjs.com/products/valhalla-content-hub/)) seront intégrés aux offres de Netlify. Le nouveau mot d'ordre est "composable architecture". Gatsby n'est pas l'outil le plus populaire actuellement, mais je trouve que cette acquisition à du sens, en particulier pour le content hub et toutes les intégrations CMS sur lesquelles ils ont travaillé. L'offre Gatsby Cloud est plus difficile à faire adopter que des features payantes en option sur Netlify, et c'est encore plus vrai pour les sites qui n'utilisent pas le framework Gatsby.
+
+À lire également:
+
+- 📜 [Gatsby is joining Netlify](https://www.gatsbyjs.com/blog/gatsby-is-joining-netlify/)
+- 📜 [Netlify Acquires Gatsby, Its Struggling Jamstack Competitor](https://thenewstack.io/netlify-acquires-gatsby-its-struggling-jamstack-competitor/)
+- 🎥 [Why would anyone buy Gatsby?](https://www.youtube.com/watch?v=5HE6FcOpit8)
 
 ---
 
-[Making state machines global in React](https://stately.ai/blog/making-state-machines-global-in-react) + https://twitter.com/DavidKPiano/status/1620815180392452096
+[![Making state machines global in React](/emails/issues/134/xstate.jpg)](https://stately.ai/blog/making-state-machines-global-in-react)
+
+**[Making state machines global in React](https://stately.ai/blog/making-state-machines-global-in-react)**
+
+Présentation de la nouvelle API `createActorContext` qui fait son apparition dans XState 3.1. Elle permet de faciliter la création de state machines XState globales, associées à un context React. Il est possible d'utiliser un système de sélecteurs, ou encore de fournir une state machine custom au provider (utilise si d'utiliser des props?).
 
 ---
 
-- [React recursively re-renders child components, but there is a nuance](https://alexsidorenko.com/blog/react-render-children-prop/)
-- [WebStorm announces official support for Astro](https://astro.build/blog/astro-webstorm-support/) + https://twitter.com/astrodotbuild/status/1621591261521260549
-- [`create-astro` CLI redesign](https://twitter.com/n_moore/status/1621524815550074880)
-- [TypeScript Utility Types You Need To Know](https://www.builder.io/blog/utility-types): présente en particulier `Awaited` et `ReturnType`, mais aussi `Readonly` dans un contexte React.
-- [Building a GPT-3 app with Next.js and Vercel Edge Functions](https://vercel.com/blog/gpt-3-app-next-js-vercel-edge-functions)
-- [Ionic 7 Beta](https://ionic.io/blog/announcing-the-ionic-7-beta)
-- [Why would anyone buy Gatsby?](https://www.youtube.com/watch?v=5HE6FcOpit8)
-- [Using Svelte Inside A React App](https://www.youtube.com/watch?v=FrusJNycQvk)
-- [Shopify.com using Remix](https://twitter.com/remix_run/status/1622666016135475200)
+- 📜 [React recursively re-renders child components, but there is a nuance](https://alexsidorenko.com/blog/react-render-children-prop/): article visuel sympa qui illustre comment le découpage en composants et la colocation de state peuvent éviter des re-render inutiles.
+- 📜 [Custom React Hooks and When to Use Them](https://thoughtbot.com/blog/custom-react-hooks): il faut parfois créer des hooks sur mesure, même si ils n'ont pas vocation à être réutilisés. Mais il faut faire attention: les abstractions inutiles ont aussi un cout.
+- 📜 [TypeScript Utility Types You Need To Know](https://www.builder.io/blog/utility-types): présente en particulier `Awaited` et `ReturnType`, mais aussi `Readonly` dans un contexte React.
+- 📜 [React JS Best Practices From The New Docs](https://sebastiancarlos.com/react-js-best-practices-from-the-new-docs-1c65570e785d): lecture intéressante pour ceux qui veulent avoir un aperçu du contenu de la nouvelle doc. Je ne suis pas d'accord avec tous les commentaires (ne passez surtout pas à coté de [useSyncExternalStore](https://thisweekinreact.com/articles/useSyncExternalStore-the-underrated-react-api) 😅).
+- 📜 [WebStorm announces official support for Astro](https://astro.build/blog/astro-webstorm-support/)
+- 📜 [Demystifying UI Frameworks and Theming for React Apps](https://www.velotio.com/engineering-blog/demystifying-ui-frameworks-and-theming-for-react-apps)
+- 🎥 [Using Svelte Inside A React App](https://www.youtube.com/watch?v=FrusJNycQvk)
+- 👀 [Shopify.com using Remix](https://twitter.com/remix_run/status/1622666016135475200)
+- 👀 [`create-astro` CLI redesign](https://twitter.com/n_moore/status/1621524815550074880)
+- 📦 [Ionic 7 Beta](https://ionic.io/blog/announcing-the-ionic-7-beta)
+- 📦 [Netlify/Remix-Compute](https://github.com/netlify/remix-compute): Remix + Netlify adapter
 
 <SubscribeFormEmbed />
 
@@ -83,12 +105,20 @@ Use [Checkly](https://www.checklyhq.com/?utm_medium=email&utm_source=newsletter&
 
 ## 📱 React-Native {#react-native}
 
-- [RFC: React DOM for Native (reduce API fragmentation)](https://twitter.com/ReactWeb/status/1621220405251014656): la RFC de Nicolas Gallagher a été mise à jour. Le but est d'aligner les APIs React-Native le plus possible des APIs DOM pour transformer le "learn once, run everywhere" en "write once, run everywhere". La communauté semble partagée.
-- [Android-performance-profiler becomes Flashlight](https://twitter.com/almouro/status/1622588283740880897)
-- [SolidJS + NativeScript demo running React-Native-WebView](https://twitter.com/ammarahm_ed/status/1622259723729764354): la promesse d'Open Native est intéressante pour la portabilité du code natif.
-- [Ignite Cookbook for React Native](https://twitter.com/ir_ignite/status/1621202420704620544): liste de recettes React-Native.
-- [The White House calls for more interoperability between mobile platforms](https://twitter.com/JI/status/1620948253381632000)
-- [React-Native-Radio 258 - AI Robots coding React Native?!](https://reactnativeradio.com/episodes/r258-robots-coding-react-native)
+[![React DOM for Native (reduce API fragmentation)](/emails/issues/134/rn-web.jpg)](https://github.com/necolas/discussions-and-proposals/blob/reduce-fragmentation/proposals/0000-reduce-fragmentation.md6)
+
+**[React DOM for Native (reduce API fragmentation)](https://github.com/necolas/discussions-and-proposals/blob/reduce-fragmentation/proposals/0000-reduce-fragmentation.md6)**
+
+La [RFC](https://github.com/react-native-community/discussions-and-proposals/pull/496) de Nicolas Gallagher (Meta / React-Native-Web) a été mise à jour. Le but est d'aligner les APIs React-Native le plus possible des APIs Web, y compris les éléments DOM comme `div`, `span` et même `select`. Le "learn once, run everywhere" pourrait se transformer progressivement en "write once, run everywhere". La communauté est assez partagée. Il va falloir réfléchir un peu à tête reposée pour savoir si c'est une bonne idée 😄, et vu l'ampleur du projet, ce n'est pas pour demain!
+
+---
+
+- 📜 [How to swap between React Native Storybook and your app](https://dev.to/dannyhw/how-to-swap-between-react-native-storybook-and-your-app-p3o): technique utile pour ceux qui ont un Storybook React-Native. Perso j'aime carrément avoir une barre de menu en dev avec des boutons qui permettent d'ouvrir/fermer le Storybook, changer d'environnement API ou autre... Ça fait gagner beaucoup de temps sur le long terme de se créer sa propre DX.
+- 📖 [Ignite Cookbook for React Native](https://twitter.com/ir_ignite/status/1621202420704620544): liste de recettes React-Native.
+- 🎨 [SolidJS + NativeScript demo running React-Native-WebView](https://twitter.com/ammarahm_ed/status/1622259723729764354): la promesse d'Open Native est intéressante pour la portabilité du code natif.
+- 🐦 [Android-Performance-Profiler becomes Flashlight](https://twitter.com/almouro/status/1622588283740880897)
+- 👀 [The White House calls for more interoperability between mobile platforms](https://twitter.com/JI/status/1620948253381632000)
+- 🎙️ [React-Native-Radio 258 - AI Robots coding React Native?!](https://reactnativeradio.com/episodes/r258-robots-coding-react-native)
 
 ---
 
@@ -117,6 +147,7 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 ## 🇫🇷 En français {#fr}
 
 - [ES2023, Netlify achète Gatsby, VSCode v1.75 - Actus de la semaine en JS](https://www.youtube.com/watch?v=-DWyB-D52FI)
+- [Diagnostic et résolution de problèmes de performance d'une application web (front et back)](https://www.youtube.com/watch?v=BEy1nYL67GA)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -127,8 +158,8 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 ## 🔀 Autre {#other}
 
 - [Updates from the 94th TC39 meeting](https://dev.to/hemanth/updates-from-the-94th-tc39-meeting-48mb): liste finalisée des propositions qui passent au stage. Particulièrement excité par AsnycContext, Change array by Copy et Symbols as WeakMap keys (nécessaire pour Records & Tuples).
-- [WebKit - Pushing Interop Forward in 2023](https://webkit.org/blog/13706/interop-2023/) + [Chrome - Interop 2023: continuing to improve the web for developers](https://web.dev/interop-2023/)
 - [Deno - The Future (and the Past) of the Web is Server Side Rendering](https://deno.com/blog/the-future-and-past-is-server-side-rendering)
+- [WebKit - Pushing Interop Forward in 2023](https://webkit.org/blog/13706/interop-2023/) + [Chrome - Interop 2023: continuing to improve the web for developers](https://web.dev/interop-2023/)
 - [Understanding monomorphism can improve your JavaScript performance 60x](https://twitter.com/mhevery/status/1622499229813047296)
 - [Speeding up the JavaScript ecosystem - eslint](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-3/)
 - [Google is working on bringing Chromium to iOS](https://twitter.com/OpenWebAdvocacy/status/1621653519274246144) + [Mozilla is working on bringing Firefox to iOS](https://twitter.com/OpenWebAdvocacy/status/1622898924775415808)
@@ -140,31 +171,14 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 - [Don't use return types, unless...](https://www.youtube.com/watch?v=nwSe95uFN8E)
 - [The Dangers Of Return Types in TypeScript](https://www.youtube.com/watch?v=I6V2FkW1ozQ)
 - [Learn Images - In-depth course on images for the web](https://web.dev/learn/images/)
+- [Forking Chrome to render in a terminal](https://fathy.fr/carbonyl)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/trashh_dev/status/1622254449468272640
+Cette violence 😅 pourquoi est-il si méchant.
 
-https://twitter.com/mattpocockuk/status/1622243247350226945
-
-https://twitter.com/flaviocopes/status/1622159970266488832
-
-https://twitter.com/jherr/status/1621903690197250048
-
-https://twitter.com/jarredsumner/status/1621720676762791936
-
-https://twitter.com/transitive_bs/status/1621422250569211910
-
-https://twitter.com/BHolmesDev/status/1621331322265272327
-
-https://twitter.com/transitive_bs/status/1621422250569211910
-
-https://twitter.com/ThePrimeagen/status/1620827474681827333
-
-https://twitter.com/trashh_dev/status/1620811316939345920
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+[![alt](/emails/issues/134/meme.png)](https://twitter.com/ThePrimeagen/status/1620827474681827333)
 
 A plus 👋
