--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/134/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/134/index.mdx
@@ -9,11 +9,11 @@ unlisted: true
 
 Salut à tous !
 
-Gatsby vient d'être racheté par Netlify 🤯
+Gatsby vient d'être racheté par Netlify 🤯!
 
 Il y a aussi une RFC très intéressante à lire si vous êtes passionnés de cross-platform en React-Native.
 
-A part ça, c'est une semaine plutôt calme. Ça tombe bien, car j'ai eu beaucoup de temps cette semaine 😄. Je dois finir quelques préparatifs pour l'email de la semaine prochaine qui sera un peu différent.
+Sinon, c'est une semaine plutôt calme. Ça tombe bien, car j'ai pas beaucoup de temps 😄. Je termine quelques préparatifs pour l'email de la semaine prochaine qui sera un peu différent.
 
 Il devrait y avoir des annonces liées à la conf **[React Native Connection](https://reactnativeconnection.io/)** au meetup [React Native Paris #2](https://www.meetup.com/fr-FR/meetup-group-xaaafwks/events/291247291/) ce soir 😜.
 
@@ -116,7 +116,7 @@ La [RFC](https://github.com/react-native-community/discussions-and-proposals/pul
 - 📜 [How to swap between React Native Storybook and your app](https://dev.to/dannyhw/how-to-swap-between-react-native-storybook-and-your-app-p3o): technique utile pour ceux qui ont un Storybook React-Native. Perso j'aime carrément avoir une barre de menu en dev avec des boutons qui permettent d'ouvrir/fermer le Storybook, changer d'environnement API ou autre... Ça fait gagner beaucoup de temps sur le long terme de se créer sa propre DX.
 - 📖 [Ignite Cookbook for React Native](https://twitter.com/ir_ignite/status/1621202420704620544): liste de recettes React-Native.
 - 🎨 [SolidJS + NativeScript demo running React-Native-WebView](https://twitter.com/ammarahm_ed/status/1622259723729764354): la promesse d'Open Native est intéressante pour la portabilité du code natif.
-- 🐦 [Android-Performance-Profiler becomes Flashlight](https://twitter.com/almouro/status/1622588283740880897)
+- 🐦 [Android-Performance-Profiler becomes Flashlight](https://twitter.com/almouro/status/1622588283740880897) + [Flashlight.dev](https://flashlight.dev/): Flashlight Cloud est un nouveau service qui veut devenir le Lighthouse pour mobile.
 - 👀 [The White House calls for more interoperability between mobile platforms](https://twitter.com/JI/status/1620948253381632000)
 - 🎙️ [React-Native-Radio 258 - AI Robots coding React Native?!](https://reactnativeradio.com/episodes/r258-robots-coding-react-native)
 
